# AI-Brain

./: .gitignore  DESIGN-4.md  LANDING-PAGE-STRUCTURE.md  PROGRESS.md  README.md  SECURITY-OVERVIEW.md  SECURITY.md  docker-compose.yml
apps/api/: .env.example  .gitignore  README.md  celerybeat-schedule.db  main.py  pm-test-questions.md  pyproject.toml
apps/api/ai/: context.py  embeddings.py  llm.py  prompts.py  rag.py  ranking.py  temporal.py  timeframe.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 403de93ef919_add_client_contact_emails.py  885b0b21eecb_add_agency_password_hash.py  a1b2c3d4e5f6_encrypt_tokens_and_cascade_deletes.py  b2c3d4e5f6a7_row_level_security.py  c3d4e5f6a7b8_members_google_auth.py  d4e5f6a7b8c9_rls_member_context.py  e8a046fe7204_initial_schema.py  f525f5929eea_add_audit_logs_table.py
apps/api/core/: audit.py  config.py  crypto.py  ratelimit.py  security.py  security_headers.py
apps/api/db/: models.py  session.py  types.py
apps/api/routers/: activity.py  auth.py  clients.py  integrations.py  members.py  summaries.py
apps/api/tests/: test_prompt_safety.py  test_ranking.py  test_ratelimit.py  test_security_headers.py  test_temporal.py  test_timeframe.py
apps/api/workers/: alerts.py  celery_app.py  summarizer.py  tasks.py
apps/api/workers/ingestion/: gmail.py  jira.py  slack.py
apps/web/: FRONTEND.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: app-data.tsx  app-rail.tsx  app-shell.tsx  app-sidebar.tsx  avatar.tsx  brand-icons.tsx  command-menu.tsx  logo.tsx  (+6 more)
(+48 files in other folders)
