[project]
name = "agency-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic==1.14.*",
    "anthropic==0.40.*",
    "asyncpg==0.30.*",
    "atlassian-python-api==3.41.*",
    "bcrypt>=5.0.0",
    "celery==5.4.*",
    "email-validator>=2.3.0",
    "fastapi==0.115.*",
    "google-api-python-client==2.150.*",
    "google-auth==2.36.*",
    "google-auth-oauthlib==1.2.*",
    "google-genai>=1.55.0",
    "greenlet>=3.5.1",
    "httpx==0.28.*",
    "openai==1.55.*",
    "pgvector==0.3.*",
    "psycopg2-binary==2.9.*",
    "pydantic==2.10.*",
    "pydantic-settings==2.6.*",
    "pyjwt==2.10.*",
    "python-dotenv==1.0.*",
    "redis==5.2.*",
    "slack-sdk==3.33.*",
    "sqlalchemy==2.0.*",
    "uvicorn[standard]==0.32.*",
]
